--- a/src/locales/it/canvas.json
+++ b/src/locales/it/canvas.json
@@ -131,5 +131,14 @@
     "startChattingDescription": "Tutto pronto! Clicca qui sotto per iniziare la tua prima chat.",
     "launching": "Avvio...",
     "startFirstChat": "Inizia Prima Chat"
+  },
+  "aiActions": {
+    "repairCode": "Ripara codice",
+    "enhanceCode": "Migliora codice",
+    "contextOptions": {
+      "entireCodeBlock": "Blocco di codice intero",
+      "functionsAndClasses": "Funzioni e classi",
+      "selection": "Selezione"
+    }
   }
 }
