--- a/src/locales/it/vfs.json
+++ b/src/locales/it/vfs.json
@@ -39,19 +39,51 @@
       "selectFile": "Seleziona {{name}}",
       "gitRepository": "Repository Git",
       "folder": "Cartella",
+      "file": "File",
       "saveName": "Salva nome",
       "cancelEdit": "Annulla modifica",
       "moreActions": "Altre azioni",
       "download": "Scarica",
+      "downloadFile": "Scarica file",
+      "downloadFolder": "Scarica cartella (.zip)",
+      "downloadFolderZip": "Scarica cartella come ZIP",
       "rename": "Rinomina",
       "delete": "Elimina",
+      "deleteItem": "Elimina {{type}}",
       "initializeGitRepo": "Inizializza Repo Git",
       "pull": "Pull",
       "commit": "Commit",
       "push": "Push",
       "status": "Stato",
-      "filePreview": "Anteprima File"
+      "filePreview": "Anteprima File",
+      "contextMenu": {
+        "openFolder": "Apri Cartella",
+        "gitPull": "Git Pull",
+        "gitCommit": "Git Commit...",
+        "gitPush": "Git Push",
+        "gitStatus": "Git Status",
+        "initializeGitRepo": "Inizializza Repository Git",
+        "rename": "Rinomina",
+        "downloadAsZip": "Scarica come ZIP",
+        "deleteFolder": "Elimina Cartella",
+        "selectFile": "Seleziona File",
+        "deselectFile": "Deseleziona File",
+        "downloadFile": "Scarica File",
+        "deleteFile": "Elimina File"
+      }
     }
+  },
+  "fileManagerBanner": {
+    "sharedVfs": "<b>VFS Condiviso:</b> Tutti i chat <i>non</i> in un progetto condividono questo filesystem.",
+    "projectSharedVfs": "<b>VFS Condiviso del Progetto:</b> Tutti i chat in questo progetto condividono questo filesystem.",
+    "projectVfs": "<b>VFS del Progetto:</b> Filesystem per questo progetto e tutti i suoi chat."
+  },
+  "newFolder": {
+    "placeholder": "Nome nuova cartella",
+    "createFolder": "Crea cartella",
+    "cancelCreate": "Annulla creazione cartella",
+    "createTooltip": "Crea (Invio)",
+    "cancelTooltip": "Annulla (Esc)"
   },
   "modal": {
     "title": "Filesystem Virtuale",
