--- a/src/locales/en/assistantSettings.json
+++ b/src/locales/en/assistantSettings.json
@@ -248,11 +248,27 @@
     "required": "Required",
     "instructions": "Instructions",
     "instructionsPlaceholder": "Instructions (optional)",
-    "editVariable": "Edit variable",
-    "removeVariable": "Remove variable",
+    "editVariable": "Edit Variable",
+    "removeVariable": "Remove Variable",
     "defaultBadge": "Default",
     "instructionsLabel": "Instructions",
     "addNew": "Add New Variable",
     "addButton": "Add Variable"
+  },
+  "assistantTabs": {
+    "systemPrompt": "System Prompt",
+    "library": "Library",
+    "agents": "Agents",
+    "autoTitles": "Auto-Titles",
+    "tools": "Tools",
+    "mcp": "MCP",
+    "parameters": "Parameters",
+    "forkCompact": "Fork Compact"
+  },
+  "assistantPrompts": {
+    "templates": "Templates",
+    "newTemplate": "New Template",
+    "editTemplate": "Edit: {{name}}",
+    "deleteConfirmation": "Are you sure you want to delete this template?"
   }
 } 
